src/snapshots/lp_parser_rs__problem__test__small_input.snap
---
source: src/problem.rs
expression: "&problem"
---
name: "Problem name: diet"
sense: Minimize
objectives:
  obj1:
    name: obj1
    coefficients:
      - name: x
        value: -0.5
      - name: y
        value: -2
      - name: z
        value: -8
  obj2:
    name: obj2
    coefficients:
      - name: y
        value: 1
      - name: x
        value: 1
      - name: z
        value: 1
  obj3:
    name: obj3
    coefficients:
      - name: z
        value: 10
      - name: x
        value: -2.5
      - name: y
        value: 1
constraints:
  c1:
    type: Standard
    name: c1
    coefficients:
      - name: x1
        value: 3
      - name: x2
        value: 1
      - name: x3
        value: 2
    operator: EQ
    rhs: 30
  c2:
    type: Standard
    name: c2
    coefficients:
      - name: x1
        value: 2
      - name: x2
        value: 1
      - name: x3
        value: 3
      - name: x4
        value: 1
    operator: GTE
    rhs: 15
  c3:
    type: Standard
    name: c3
    coefficients:
      - name: x2
        value: 2
      - name: x4
        value: 3
    operator: LTE
    rhs: 25
variables:
  x:
    name: x
    var_type: Free
  x1:
    name: x1
    var_type: Free
  x2:
    name: x2
    var_type:
      LowerBound: 1
  x2dfsdf:
    name: x2dfsdf
    var_type:
      DoubleBound:
        - 100
        - -1
  x3:
    name: x3
    var_type: Free
  x4:
    name: x4
    var_type: Free
  y:
    name: y
    var_type: Free
  z:
    name: z
    var_type: Free
